[gd_scene load_steps=6 format=3 uid="uid://bbgyirclom8br"]

[ext_resource type="Script" path="res://Scenes/Components/StatsPanel/statspanel.gd" id="1_ckd2f"]
[ext_resource type="Texture2D" uid="uid://cjjaasi1ndpxn" path="res://Assets/Images/houblon.png" id="2_bctpp"]
[ext_resource type="Texture2D" uid="uid://bv7ajahhu3j37" path="res://Assets/Images/ice-cube.png" id="3_2s5dy"]
[ext_resource type="Texture2D" uid="uid://cspnbbet7dg2j" path="res://Assets/Images/wood.png" id="4_n83ie"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2042a"]
content_margin_left = 15.0
content_margin_top = 5.0
content_margin_right = 15.0
content_margin_bottom = 5.0
bg_color = Color(0, 0, 0, 0.490196)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="StatsPanelWrapper" type="BoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_ckd2f")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_2042a")

[node name="PanelWrapper" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Title" type="Label" parent="PanelContainer/PanelWrapper"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
text = "XXXXXX"

[node name="Content" type="VBoxContainer" parent="PanelContainer/PanelWrapper"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="Wood" type="HBoxContainer" parent="PanelContainer/PanelWrapper/Content"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="WoodImage" type="TextureRect" parent="PanelContainer/PanelWrapper/Content/Wood"]
layout_mode = 2
texture = ExtResource("2_bctpp")
expand_mode = 3

[node name="WoodNumber" type="Label" parent="PanelContainer/PanelWrapper/Content/Wood"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 15
text = "XXX XXX"

[node name="WoodUnit" type="Label" parent="PanelContainer/PanelWrapper/Content/Wood"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 15
text = "T/tours"

[node name="Ice" type="HBoxContainer" parent="PanelContainer/PanelWrapper/Content"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="IceImage" type="TextureRect" parent="PanelContainer/PanelWrapper/Content/Ice"]
layout_mode = 2
texture = ExtResource("3_2s5dy")
expand_mode = 3

[node name="IceNumber" type="Label" parent="PanelContainer/PanelWrapper/Content/Ice"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "XXX XXX"

[node name="IceUnit" type="Label" parent="PanelContainer/PanelWrapper/Content/Ice"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "T/tours"

[node name="Houblon" type="HBoxContainer" parent="PanelContainer/PanelWrapper/Content"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HoublonImage" type="TextureRect" parent="PanelContainer/PanelWrapper/Content/Houblon"]
layout_mode = 2
texture = ExtResource("4_n83ie")
expand_mode = 3

[node name="HoublonNumber" type="Label" parent="PanelContainer/PanelWrapper/Content/Houblon"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "XXX XXX"

[node name="HoublonUnit" type="Label" parent="PanelContainer/PanelWrapper/Content/Houblon"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "T/tours"
